--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+[B]2.0.7[/B]
+Add mouse warning
+Fix touch lockout
+
 [B]2.0.6[/B]
 Hopefully fix weather fanart widget bug
 Fix ExtraInfo LowList bug
