Adjust skin string case

--- a/language/English (US)/strings.po
+++ b/language/English (US)/strings.po
@@ -385,8 +385,8 @@ msgid "View Options"
 msgstr "View Options"
 
 msgctxt "#31195"
-msgid "Reload Skin"
-msgstr "Reload Skin"
+msgid "Reload skin"
+msgstr "Reload skin"
 
 msgctxt "#31196"
 msgid "Use dark theme"
