--- a/language/English/strings.po
+++ b/language/English/strings.po
@@ -284,7 +284,9 @@ msgctxt "#31167"
 msgid "[B]View System Information[/B][CR][CR] •     Summary[CR] •     Storage[CR] •     Network[CR] •     Video[CR] •     Hardware[CR] •     PVR Backend"
 msgstr ""
 
-#empty string with id 31168
+msgctxt "#31168"
+msgid "Skin default"
+msgstr ""
 
 msgctxt "#31169"
 msgid "Extras"
